...
        configTopGap,
        Row(
          spacing: configWidgetSpace,
          children: [
            configLeftGap,
            ActivityButton(
              key: const Key('Build Neural Network'),
              tooltip: '''

              **Build**

              Tap here to build a Neural Network model using the
              parameter values set here.
...
                    ref.read(algorithmNeuralProvider.notifier).state = chosen;
                  }
                });
              },
            ),
            LabelledCheckbox(
              key: const Key('nnet_trace'),
              tooltip: '''

              **Trace**

              Tap here to enable/disable tracing optimization for the
              **single layer neural network**. The prediction error is provided
...
          spacing: configWidgetSpace,
          children: [
            configBotGap,
            algorithm == 'nnet'
                ? NumberField(
                    label: 'Hidden Layer:',
                    key: const Key('nnet_config_hidden_layers'),
                    controller: _nnetSizeLayerController,

                    tooltip: '''

                    The Hidden Layer parameter is used as the size parameter in
                    the nnet() model which specifies the number of units
...
                    inputFormatter: FilteringTextInputFormatter.allow(
                      RegExp(r'[0-9,\s]'),
                    ),
                  ),
            NumberField(
              label: 'Max Iterations:',
              key: const Key('maxit'),
              controller: _maxitController,
              enabled: algorithm == 'nnet',

              tooltip: '''

              The maximum number of iterations (or epochs) allowed during the
...
                  FilteringTextInputFormatter.digitsOnly, // Integers only
              validator: (value) => validateInteger(value, min: 1),
              stateProvider: maxitNeuralProvider,
            ),
            NumberField(
              label: 'Max Weights:',
              key: const Key('max_nwts'),
              controller: _maxNWtsController,
              enabled: algorithm == 'nnet',

              tooltip: '''

              The maximum number of weights allowed in the neural network model.
...
