...
    // When a new row is added after transformation, initialize its role and
    // update the role of the old variable.

    updateVariablesProvider(ref);

    Map<String, String> rolesOption = {
      'Ignore': '''

      For the selected variables in the data table below set their role to
      **Ignore**.

      To select or deselect **all variables** SHIFT-click the checkbox in the
      header row. SHIFT click will also add/remove variables, and CTRL will
...

    final ScrollController horizontalScrollController = ScrollController();

    var formatter = NumberFormat('#,###');

    return SizedBox(
      key: const Key('roles listView'),
      height: 800,
      child: Scrollbar(
        controller: horizontalScrollController,
        thumbVisibility: true,
        child: SingleChildScrollView(
          scrollDirection: Axis.horizontal,
...
